--- a/app/src/main/res/values-night/color.xml
+++ b/app/src/main/res/values-night/color.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FFFFFFFF</color>
     <color name="white">#FF000000</color>
+
+
+    <color name="orange">#FF7842</color>
+    <color name="splash">#F4CABA</color>
 </resources>
