--- a/app/src/main/res/layout/fragment_add_products.xml
+++ b/app/src/main/res/layout/fragment_add_products.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddProductsFragment">
+    tools:context=".presentation.add_products.AddProductsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
