--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
 
     <color name="orange">#FF7842</color>
     <color name="splash">#F4CABA</color>
+    <color name="green">#39FF00</color>
 
 
 </resources>
