--- a/app/src/main/res/drawable/bg_products_border.xml
+++ b/app/src/main/res/drawable/bg_products_border.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <stroke
+        android:width="1dp"
+        android:color="@color/orange"
+        />
+    <corners
+        android:radius="@dimen/_5sdp"
+        />
+
+</shape>
