--- a/app/src/main/res/drawable/bg_shimmer.xml
+++ b/app/src/main/res/drawable/bg_shimmer.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <corners
+        android:radius="@dimen/_8sdp"
+        />
+
+    <solid
+        android:color="#E6C7BB"/>
+
+</shape>
