--- a/app/src/main/res/layout/shimmer_products.xml
+++ b/app/src/main/res/layout/shimmer_products.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/cvItemView"
@@ -11,71 +12,158 @@
     app:cardCornerRadius="@dimen/_5sdp"
     >
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:clickable="true"
-        android:focusable="true"
-        android:background="@drawable/bg_products_border"
-        android:padding="@dimen/_5sdp"
         >
-        <TextView
-            android:id="@+id/tvChapterNumber"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_shimmer"
-            android:textStyle="bold"
-            android:textSize="@dimen/_12ssp"
-            android:textColor="@color/orange"
-            />
-        <TextView
-            android:id="@+id/tvChapterTitle"
-            android:layout_width="@dimen/_130sdp"
-            android:background="@drawable/bg_shimmer"
-            android:layout_margin="@dimen/_1sdp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="@dimen/_15sdp"
-            />
-        <TextView
-            android:id="@+id/tvChapterDescription"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_70sdp"
-            android:ellipsize="end"
-            android:background="@drawable/bg_shimmer"
-            android:maxLines="4"
-            android:textColor="#696969"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:textSize="@dimen/_12sdp"
-            />
 
         <LinearLayout
+            android:id="@+id/ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="@dimen/_7sdp"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/bg_products_border"
+            android:padding="@dimen/_5sdp"
             >
 
-            <ImageView
-                android:layout_width="@dimen/_28sdp"
-                android:layout_height="@dimen/_28sdp"
-                android:background="@drawable/bg_shimmer"
-                />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv"
+                android:layout_width="@dimen/_85sdp"
+                android:layout_height="@dimen/_85sdp"
+                app:cardCornerRadius="@dimen/_10sdp"
+                android:layout_marginHorizontal="@dimen/_3sdp"
+                android:elevation="@dimen/_2sdp"
+                app:cardUseCompatPadding="true"
+                >
+                <ImageView
+                    android:id="@+id/ivProduct"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:background="@drawable/bg_shimmer" />
+            </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/tvVersesCount"
-                android:layout_width="@dimen/_100sdp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_shimmer"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_gravity="center"
-                android:textColor="@color/black"
-                />
+                android:orientation="vertical"
+                android:layout_gravity="center_vertical"
+                >
+                <TextView
+                    android:id="@+id/tvProductName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:background="@drawable/bg_shimmer"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/_15ssp"
+                    android:textColor="@color/black"
+                    tools:ignore="HardcodedText" />
+
+                <TextView
+                    android:id="@+id/tvProductPrice"
+                    android:layout_width="@dimen/_140sdp"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:background="@drawable/bg_shimmer"
+                    android:ellipsize="end"
+                    android:layout_marginVertical="@dimen/_1sdp"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/_12ssp"
+                    android:textColor="@color/green"
+                    tools:ignore="HardcodedText" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/_50sdp"
+                        android:background="@drawable/bg_shimmer"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/_11sdp"
+                        android:textColor="@color/black"
+                        tools:ignore="HardcodedText" />
+
+                    <TextView
+                        android:id="@+id/tvProductType"
+                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/_40sdp"
+                        android:background="@drawable/bg_shimmer"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/_11sdp"
+                        android:textColor="@color/black"
+                        tools:ignore="HardcodedText" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginVertical="@dimen/_1sdp"
+
+                    >
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/_50sdp"
+                        android:background="@drawable/bg_shimmer"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/_11sdp"
+                        android:textColor="@color/black"
+                        tools:ignore="HardcodedText" />
+
+                    <TextView
+                        android:id="@+id/tvProductTax"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:layout_width="@dimen/_30sdp"
+                        android:background="@drawable/bg_shimmer"
+                        android:ellipsize="end"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/_11sdp"
+                        android:textColor="@color/black"
+                        tools:ignore="HardcodedText" />
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+
+
+            <!--            <TextView-->
+            <!--                android:id="@+id/tvVerse"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="Verses"-->
+            <!--                android:textStyle="bold"-->
+            <!--                android:layout_marginStart="@dimen/_3sdp"-->
+            <!--                android:layout_gravity="center"-->
+            <!--                android:textColor="@color/black"-->
+            <!--                />-->
+            <!--            -->
 
         </LinearLayout>
-    </LinearLayout>
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 
