--- a/app/src/main/res/layout/iv_products.xml
+++ b/app/src/main/res/layout/iv_products.xml
@@ -23,12 +23,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:clickable="true"
+
             android:focusable="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@drawable/bg_products_border"
+            android:background="@drawable/bg_products_iv"
             android:padding="@dimen/_5sdp"
             >
 
