--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -14,9 +14,9 @@
             android:id="@+id/action_productsFragment_to_addProductsFragment"
             app:destination="@id/addProductsFragment"
             app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/from_left"
-            app:popEnterAnim="@anim/to_right"
-            app:popExitAnim="@anim/to_left" />
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
     <fragment
         android:id="@+id/addProductsFragment"
