--- a/app/src/main/res/layout/fragment_add_products.xml
+++ b/app/src/main/res/layout/fragment_add_products.xml
@@ -7,12 +7,176 @@
     tools:context=".presentation.add_products.AddProductsFragment">
 
     <TextView
+        android:id="@+id/tvProducts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_products"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Add Products"
+        android:fontFamily="@font/title_medium"
+        android:textSize="@dimen/_23ssp"
+        android:textColor="@color/orange"
+        android:layout_margin="@dimen/_14sdp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_150sdp"
+        android:id="@+id/animation_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvProducts"
+        app:lottie_rawRes="@raw/addproducts"
+        app:lottie_autoPlay="true"
+        android:layout_marginTop="@dimen/_20sdp"
+        app:layout_constraintBottom_toTopOf="@id/llAddingProducts"
+        app:lottie_loop="true"/>
+
+    <LinearLayout
+        android:id="@+id/llAddingProducts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/bg_products_border"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        android:padding="@dimen/_10sdp"
+        app:layout_constraintTop_toBottomOf="@id/animation_view"
+        android:layout_marginTop="@dimen/_20sdp"
+        >
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_1sdp"
+            app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
+            app:boxCornerRadiusBottomStart="@dimen/_13sdp"
+            app:boxCornerRadiusTopEnd="@dimen/_13sdp"
+            app:boxCornerRadiusTopStart="@dimen/_13sdp"
+            app:cursorColor="@color/orange"
+            app:endIconMode="clear_text"
+            app:hintTextColor="@color/orange">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etProductName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/_7sdp"
+                android:hint="@string/product_name"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="@dimen/_10sdp"
+            android:layout_weight="0.5"
+            app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
+            app:boxCornerRadiusBottomStart="@dimen/_13sdp"
+            app:boxCornerRadiusTopEnd="@dimen/_13sdp"
+            app:boxCornerRadiusTopStart="@dimen/_13sdp"
+            app:cursorColor="@color/orange"
+            app:hintTextColor="@color/orange">
+
+            <AutoCompleteTextView
+                android:id="@+id/etProductUnit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/product_type" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1"
+            >
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_1sdp"
+                app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
+                android:layout_weight="0.5"
+                app:boxCornerRadiusBottomStart="@dimen/_13sdp"
+                app:boxCornerRadiusTopEnd="@dimen/_13sdp"
+                app:boxCornerRadiusTopStart="@dimen/_13sdp"
+                app:cursorColor="@color/orange"
+                app:endIconMode="clear_text"
+                app:hintTextColor="@color/orange">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etProductPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/_7sdp"
+                    android:hint="@string/product_price"
+                    android:inputType="text" />
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_1sdp"
+                app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
+                android:layout_weight="0.5"
+                app:boxCornerRadiusBottomStart="@dimen/_13sdp"
+                app:boxCornerRadiusTopEnd="@dimen/_13sdp"
+                app:boxCornerRadiusTopStart="@dimen/_13sdp"
+                app:cursorColor="@color/orange"
+                app:endIconMode="clear_text"
+                app:hintTextColor="@color/orange">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etProductTax"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/_7sdp"
+                    android:hint="@string/product_tax"
+                    android:inputType="text" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvAddImage"
+            android:layout_width="@dimen/_85sdp"
+            android:layout_height="@dimen/_85sdp"
+            app:cardCornerRadius="@dimen/_10sdp"
+            android:layout_marginHorizontal="@dimen/_3sdp"
+            android:elevation="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_gravity="center"
+            app:cardUseCompatPadding="true"
+            >
+            <ImageView
+                android:id="@+id/ivProduct"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/baseline_add_photo_alternate_24"
+                android:scaleType="centerCrop"
+                android:background="@android:color/transparent" />
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnAddProduct"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_45sdp"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_20sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/llAddingProducts"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:backgroundTint="@color/orange"
+        android:text="Add Product"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        app:cornerRadius="@dimen/_8sdp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
