--- a/app/src/main/res/layout/posting_done.xml
+++ b/app/src/main/res/layout/posting_done.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="@dimen/_200sdp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="@dimen/_8sdp"
     app:cardCornerRadius="@dimen/_10sdp"
     android:backgroundTint="@color/white"
     android:background="@color/white"
+    android:layout_gravity="center"
     android:layout_margin="@dimen/_25sdp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_24sdp"
         >
         <com.airbnb.lottie.LottieAnimationView
             android:layout_width="match_parent"
@@ -33,29 +33,15 @@
             android:text="@string/product_has_been_posted"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold"
+            android:layout_marginBottom="@dimen/_15sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="@dimen/_8sdp"
             android:textColor="@color/orange"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/animation_view"
             />
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnOk"
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="@dimen/_45sdp"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/_10sdp"
-            android:layout_marginHorizontal="@dimen/_20sdp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvMessage"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:backgroundTint="@color/orange"
-            android:text="@string/ok"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF"
-            app:cornerRadius="@dimen/_8sdp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
