--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -53,6 +53,21 @@
 
     </com.google.android.material.card.MaterialCardView>
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_150sdp"
+        android:id="@+id/animation_view"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchCv"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:lottie_rawRes="@raw/no_data"
+        app:lottie_autoPlay="true"
+        android:layout_marginBottom="@dimen/_70sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        app:lottie_loop="true"/>
+
     <LinearLayout
         android:id="@+id/ll"
         android:layout_width="0dp"
