--- a/app/src/main/res/layout/fragment_add_products.xml
+++ b/app/src/main/res/layout/fragment_add_products.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tvProducts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Products"
+        android:text="@string/add_productss"
         android:fontFamily="@font/title_medium"
         android:textSize="@dimen/_23ssp"
         android:textColor="@color/orange"
@@ -19,10 +19,43 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+
+    <LinearLayout
+        android:id="@+id/llNoInternet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        >
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_200sdp"
+            android:id="@+id/no_internet_view"
+            android:visibility="visible"
+            app:lottie_rawRes="@raw/no_internet"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/please_turn_on_your_internet_for_posting_products"
+            android:fontFamily="@font/title_medium"
+            android:textSize="@dimen/_15ssp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="@color/orange"
+            />
+    </LinearLayout>
+
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="match_parent"
         android:layout_height="@dimen/_150sdp"
         android:id="@+id/animation_view"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvProducts"
@@ -31,8 +64,8 @@
         android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintBottom_toTopOf="@id/llAddingProducts"
         app:lottie_loop="true"/>
-
     <LinearLayout
+        android:visibility="visible"
         android:id="@+id/llAddingProducts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,8 +75,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="@dimen/_10sdp"
         android:padding="@dimen/_10sdp"
+        app:layout_constraintBottom_toTopOf="@id/btnAddProduct"
         app:layout_constraintTop_toBottomOf="@id/animation_view"
-        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         >
 
         <com.google.android.material.textfield.TextInputLayout
@@ -168,6 +202,7 @@
 
     </LinearLayout>
     <com.google.android.material.button.MaterialButton
+        android:visibility="visible"
         android:id="@+id/btnAddProduct"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_45sdp"
