--- a/app/src/main/res/layout/fragment_add_products.xml
+++ b/app/src/main/res/layout/fragment_add_products.xml
@@ -17,20 +17,39 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             >
-            <TextView
-                android:id="@+id/tvProducts"
+            <LinearLayout
+                android:id="@+id/llTop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/add_productss"
-                android:fontFamily="@font/title_medium"
-                android:textSize="@dimen/_23ssp"
-                android:textColor="@color/orange"
-                android:gravity="start"
-                android:layout_margin="@dimen/_14sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/animation_view"
-                />
+                android:layout_margin="@dimen/_14sdp"
+
+                >
+
+                <ImageView
+                    android:id="@+id/ivBackToProductFragment"
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:src="@drawable/baseline_keyboard_backspace_24"
+                    app:tint="@color/orange"
+
+                    android:layout_gravity="center_vertical"
+                    />
+                <TextView
+                    android:id="@+id/tvProducts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_productss"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:fontFamily="@font/title_medium"
+                    android:textSize="@dimen/_23ssp"
+                    android:textColor="@color/orange"
+                    android:gravity="start"
+                    />
+            </LinearLayout>
+
 
 
             <LinearLayout
@@ -71,7 +90,7 @@
                 android:visibility="visible"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvProducts"
+                app:layout_constraintTop_toBottomOf="@id/llTop"
                 app:lottie_rawRes="@raw/addproducts"
                 app:lottie_autoPlay="true"
                 android:layout_marginTop="@dimen/_20sdp"
